--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "1.0.14",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
-    "sequelize": "^4.15.0"
+    "sequelize": "^4.15.0",
+    "styled-components": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
