--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql": "^0.11.7",
     "graphql-tools": "^2.5.1",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "merge-graphql-schemas": "^1.2.0",
     "mobx": "^3.3.1",
