--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "enzyme": "^3.2.0",
     "express": "^4.16.2",
     "fbjs": "^0.8.16",
+    "formik": "^0.10.5",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.5.1",
