--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mobx-react": "^4.3.3",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-apollo": "^2.0.1",
     "react-dom": "^16.0.0",
