--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "downshift": "^1.20.0",
     "enzyme": "^3.2.0",
     "express": "^4.16.2",
     "fbjs": "^0.8.16",
     "formik": "^0.10.5",
     "graphql": "^0.11.7",
+    "graphql-subscriptions": "^0.5.5",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.5.1",
     "jsonwebtoken": "^8.1.0",
@@ -58,7 +60,8 @@
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "sequelize": "^4.15.0",
-    "styled-components": "^2.2.3"
+    "styled-components": "^2.2.3",
+    "subscriptions-transport-ws": "^0.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
