--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apollo-link": "^1.0.3",
     "apollo-link-context": "^1.0.1",
     "apollo-link-http": "^1.2.0",
+    "apollo-link-ws": "^1.0.1",
     "apollo-server-express": "^1.1.7",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
