Updated running config

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "nodemon --exec babel-node ./server/index.js",
+    "server": "babel-node ./server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
